# tinyqr

./: CMakeLists.txt  Makefile  README.md  example  main.cpp  quick.cpp  tinyqr.h
benchmarking/: A.txt  A2.txt  benchmark_lm.cpp  benchmark_qr.cpp  profile_lm.cpp  test_lm.cpp  test_qr.cpp  utils.h  y.txt  y2.txt
